# snake-shifter

./: .cookiecutter.json  .coveragerc  .env  .flake8  .gitignore  .python-version  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  mypy.ini  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: constraints.txt  tests.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
examples/: example-rich-tree.py
src/snake/shifter/: __init__.py  abc.py  context.py  key_type.py  typing.py  wrapper.py
src/snake_shifter/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_context.py  test_key_type.py  test_main.py  test_simple_children.py  test_simple_funcs.py  test_simple_graph.py  test_simple_parents.py
