[tool.poetry]
name = "snake-shifter"
version = "0.0.0"
description = "Snake Shifter"
authors = ["Rob Thatcher <thatcr@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/thatcr/snake-shifter"
repository = "https://github.com/thatcr/snake-shifter"
documentation = "https://snake-shifter.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages=[
    { include="snake/shifter", from="src" }
]

[tool.poetry.urls]
Changelog = "https://github.com/thatcr/snake-shifter/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.9.0"
mypy = "^0.800"
typeguard = "^2.9.1"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^3.3.1"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.10.0"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.8"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^3.3.0"
sphinx-rtd-theme = "^0.5.0"
sphinx-click = "^2.5.0"
Pygments = "^2.7.2"
rope = "^0.18.0"
pytest-watch = "^4.2.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.11.1"
env_config = "^1.10.0"
rich = "^9.10.0"

[tool.poetry.scripts]
snake-shifter = "snake.shifter.__main__:main"

[tool.coverage.paths]
source = [
    "src",
    "**/site-packages"
]

[tool.coverage.run]
branch = true
source = ["tests/", "src/"]
source_pkgs = [ "snake.shifter"]

[tool.coverage.report]
show_missing = true
fail_under = 100


[tool.pytest.ini_options]
addopts = [
    "--xdoctest"
]
testpaths = [
    "tests/",
    "src/"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
